# SimpleQmlNotify

./: .gitignore  CMakeLists.txt  NotificationForm.qml  NotificationServiceView.qml  NotifyModule.qrc  QML.qrc  QmlNotify.pri  QmlNotify.pro  README.md  doxygen.conf  historynotificationsmodel.cpp  historynotificationsmodel.h  notificationdata.cpp  notificationdata.h  notificationservice.cpp  notificationservice.h  notifyservice_global.h  notifyservice_global.h.in  qmlnotifyservice.cpp  qmlnotifyservice.h
NotifyModule/: BasePopUp.qml  Metrix.qml  NotificationForm.qml  NotificationHistoryView.qml  NotificationServiceView.qml  YesNoQuestion.qml  qmldir
qmlNotify_languages/: de.ts  en.ts  es.ts  fr.ts  ja.ts  pl.ts  ru.ts  tr.ts  uk.ts  zh.ts
